--- a/Project.toml
+++ b/Project.toml
@@ -5,13 +5,19 @@ authors = ["Götz Pfeiffer <goetz.pfeiffer@universityofgalway.ie>"]
 version = "0.1.0"
 
 [deps]
+Base64 = "2a0f44e3-6c83-55bd-87e4-b1978d98bd5f"
 GraphPlot = "a2cc645c-3eea-5389-862e-a155d0052231"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 
 [compat]
+Base64 = "1.11.0"
 Documenter = "1.12.0"
 GraphPlot = "0.6.1"
 Graphs = "1.13.0"
+IJulia = "1.28.1"
+JSON = "0.21.4"
 Test = "1.11.0"
 
 [extras]
